# sdltest

./: CMakeLists.txt  README.md  main.c
include/: Camera.h  Matrices.h  Quaternion.h  Rasterizer.h  TLCPrimitive.h  Transform.h  Vertex.h  camera.h  edge.h  frustrum.h  global.h  gradients.h  matrices.h  pipelinevertex.h  plane.h  quaternion.h  rasterizer.h  renderpipeline.h  tlcinstance.h  tlcprimitive.h  transform.h  vertex.h
res/: floor.mtl
src/: Camera.cpp  Matrices.cpp  Rasterizer.cpp  TLCPrimitive.cpp  Transform.cpp  Vertex.cpp  camera.cc  edge.cpp  frustrum.cc  gradients.cpp  main.cc  main.cpp  matrices.cc  pipelinevertex.cc  plane.cc  rasterizer.cc  renderpipeline.cc  tlcinstance.cc  tlcprimitive.cc  transform.cc  vertex.cc
